--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,58 @@
-.signup-button {
-  background-color: #0095ff;
-  color: #fff;
-  font-weight: bold;
-  padding: 0.5rem 1rem;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-.signup-button.focus-mode {
-  background-color: #00a8ff;
+body {
+  margin: 0;
+  padding: 0;
 }
 
 .small-text {
   font-size: 0.8rem;
   color: #999;
+}
+
+.focused-button {
+  background-color: blue;
+  color: white;
+  padding: 15px 25px;
+  border-radius: 10px;
+  font-size: 20px;
+  margin: 25px 0;
+}
+
+input {
+  padding: 10px 20px;
+  outline: none;
+  width: 400px;
+  font-size: 20px;
+  background-color: #2c2c2c;
+}
+
+.nonFocus {
+  background-color: #999;
+  color: rgb(106, 104, 104);
+  padding: 15px 25px;
+  border-radius: 10px;
+  font-size: 20px;
+  margin: 25px 0;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 10px 5px 25px 10px rgb(79, 79, 79);
+  height: 500px;
+}
+
+.inputBox {
+  margin: 20px 0;
+}
+
+.linx {
+  text-decoration: none;
+}
+
+.toi {
+  color: white;
+  margin: 25px 0;
+  font-size: 25px;
 }
