added the foot note

--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,7 @@ input {
   border-radius: 10px;
   font-size: 20px;
   margin: 25px 0;
+  
 }
 
 .card {
@@ -55,4 +56,11 @@ input {
   color: white;
   margin: 25px 0;
   font-size: 25px;
+}
+
+
+.note{
+  margin: 25px 0;
+  font-size: 20px;
+  color: white;
 }
